--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
 <p>User hosted version can be found here - <a href="https://coinsecurecg.appspot.com">https://coinsecurecg.appspot.com</a></p>
 
 <ul>
-<li>Whatsapp trading Bot - Screenshots sumbitted on forums. Source code yet to be submitted.</li>
+<li>Whatsapp trading Bot - Screenshots sumbitted on forums. <a href="https://github.com/IIIIIHIIIII/">IIIIIHIIIII</a> /WhatBot/ </li>
 </ul>
+
+<ul>
+<li>coinsecure-island - Screenshots sumbitted on forums. <a href="https://github.com/basavk/">basavk</a> /coinsecure-island/ </li>
+</ul>
+<p> Demo Video: <a href="https://www.youtube.com/watch?v=kKhlpmUn7fI">https://www.youtube.com/watch?v=kKhlpmUn7fI</a> </p>
+
       </section>
     </div>
 
